--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
       - GITHUB_REPO=Sterikworks/Ramshackle_Issues        # GitHub repo for issues
     volumes:
       # Persist uploaded files
-      - ./uploads:/app/uploads:rw
-    user: "node"
+      - ./uploads:/app/uploads
     healthcheck:
       test: ["CMD", "node", "-e", "require('http').get('http://localhost:5000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
       interval: 30s
